[gd_scene load_steps=6 format=3 uid="uid://d20rkomgxxlq8"]

[ext_resource type="Script" path="res://scripts/singleplayer/tank_1.gd" id="1_fy6a5"]
[ext_resource type="Texture2D" uid="uid://dwm57ny557t0t" path="res://icon.svg" id="2_oflka"]
[ext_resource type="Texture2D" uid="uid://rj3fumfekq3l" path="res://assets/rwcircle.png" id="3_84sov"]
[ext_resource type="Texture2D" uid="uid://c2plgu1mrvbh0" path="res://assets/wsquare.png" id="4_s3csa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_su32n"]
size = Vector2(97, 93)

[node name="tank1" type="CharacterBody2D"]
script = ExtResource("1_fy6a5")

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("2_oflka")

[node name="indicatortemp" type="Sprite2D" parent="Base"]
position = Vector2(59.5, 4.25)
scale = Vector2(0.01625, 0.046875)
texture = ExtResource("4_s3csa")

[node name="Spinny" type="Sprite2D" parent="."]
position = Vector2(-1, 1)
rotation = -1.57615
scale = Vector2(0.283073, 0.25651)
texture = ExtResource("3_84sov")

[node name="Barrel" type="Sprite2D" parent="Spinny"]
position = Vector2(0, 268.995)
scale = Vector2(0.0804968, 0.543858)
texture = ExtResource("4_s3csa")

[node name="bullet_spawn_thing" type="Node2D" parent="Spinny/Barrel"]
position = Vector2(0, 465.934)
rotation = 1.5708

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
shape = SubResource("RectangleShape2D_su32n")

[node name="bullet_cooldown" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="fire_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="bullet_cooldown" to="." method="_on_bullet_cooldown_timeout"]
[connection signal="timeout" from="fire_cooldown" to="." method="_on_fire_cooldown_timeout"]
